# api_medica

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml
.github/workflows/: ci.yml  main.yml
api_medica_core/: asgi.py  settings.py  urls.py  wsgi.py
appointments/: models.py  serializers.py  urls.py  views.py
appointments/migrations/: 0001_initial.py
medical_appointment_api/: asgi.py  settings.py  urls.py  wsgi.py
professionals/: models.py  serializers.py  urls.py  views.py
professionals/migrations/: 0001_initial.py
professionals/tests/: test_api.py  test_models.py  test_security.py
