[project]
name = "api-medica"
version = "0.1.0"
description = "API médica desenvolvida com Django e Django Rest Framework."
authors = [
    {name = "Rui Franscisco de Paula",email = "rui.pdiniz@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=6.0,<7.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
