## pyproject.toml (Corrigido para formato string dos autores)

[tool.poetry]
name = "api-medica"
version = "0.1.0"
description = "API médica desenvolvida com Django e Django Rest Framework."
authors = ["Rui Franscisco de Paula <rui.pdiniz@gmail.com>"] # CORREÇÃO AQUI
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
# Define a versão do Python requerida
python = ">=3.12,<4.0" 
django = "^6.0.0" 
djangorestframework = "^3.16.1"
psycopg2-binary = "^2.9.11"
python-dotenv = "^1.2.1"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"